# Module_Web_13_MHW

./: .env.example  Readme.md  main.py  pyproject.toml
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  1259_vm  16395  16398  16400  16401  16406  16407  16409  16411  16417  16418  16420  2224  2579  2604  2606  2608  2610  2610_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  (+7 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1262  2671  2672  pg_control  pg_internal.init
src/conf/: config.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
